--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Mauricio O. Auriol",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.13.8",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
@@ -21,12 +22,14 @@
     "@babel/cli": "^7.13.0",
     "@babel/core": "^7.13.8",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-transform-runtime": "^7.13.8",
     "@babel/preset-env": "^7.13.8",
     "@babel/preset-react": "^7.12.13",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.21.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.22.0",
