--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
